# docling-api

./: DOCLING_UPGRADE.md  Dockerfile  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  pyproject.toml
document_converter/: route.py  service.py
worker/: tasks.py
