[tool.poetry]
name = "document-to-markdown"
version = "0.1.0"
description = ""
authors = ["drmingler <davidemmanuel75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
docling = {version = "^2.74.0", extras = ["vlm"]}
python-multipart = "^0.0.17"
celery = "^5.4.0"
flower = "^2.0.1"
redis = "^5.2.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
